webapp-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blueapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueapp
  template:
    metadata:
      labels:
        app: blueapp
    spec:
      containers:
      - name: fastapi
        image: thundercatsho/pythonwebserver:latest
        ports:
        - containerPort: 8000
