webapp-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greenapp
  template:
    metadata:
      labels:
        app: greenapp
    spec:
      containers:
      - name: fastapi
        image: thundercatsho/pythonwebserver:latest
        ports:
        - containerPort: 8000
