webapp-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blueapp
spec:
  selector:
    app: blueapp
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 30005
