webapp-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: greenapp
spec:
  selector:
    app: greenapp
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8000
    nodePort: 30006
